--- a/0805/DH.ipynb
+++ b/0805/DH.ipynb
@@ -2,243 +2,345 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "순위"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import heapq as hq\n",
-    "def ftn(st,n,win,lose):\n",
-    "    wcost,lcost = [float(\"INF\")] * n,[float(\"INF\")] * n\n",
-    "    \n",
-    "    wq,lq = [(1,st)],[(1,st)]\n",
-    "    while wq:\n",
-    "        c,s = hq.heappop(wq)\n",
-    "        if wcost[s] > c:\n",
-    "            wcost[s] = c\n",
-    "            for e in win[s]:\n",
-    "                if wcost[e] > c+1:\n",
-    "                    hq.heappush(wq,(c+1,e))\n",
-    "    while lq:\n",
-    "        c,s = hq.heappop(lq)\n",
-    "        if lcost[s] > c:\n",
-    "            lcost[s] = c\n",
-    "            for e in lose[s]:\n",
-    "                if lcost[e] > c+1:\n",
-    "                    hq.heappush(lq,(c+1,e))\n",
-    "    return 1 if sum(True for l,w in zip(lcost,wcost) if l != float(\"INF\") or w != float(\"INF\")) == n else 0\n",
-    "\n",
-    "def solution(n, results):\n",
-    "    win,lose = [[] for _ in range(n)],[[] for _ in range(n)]\n",
-    "    for (w,l) in results:\n",
-    "        win[w-1].append(l-1)\n",
-    "        lose[l-1].append(w-1)\n",
+    "import heapq as hq\r\n",
+    "def ftn(st,n,win,lose):\r\n",
+    "    wcost,lcost = [float(\"INF\")] * n,[float(\"INF\")] * n\r\n",
+    "    \r\n",
+    "    wq,lq = [(1,st)],[(1,st)]\r\n",
+    "    while wq:\r\n",
+    "        c,s = hq.heappop(wq)\r\n",
+    "        if wcost[s] > c:\r\n",
+    "            wcost[s] = c\r\n",
+    "            for e in win[s]:\r\n",
+    "                if wcost[e] > c+1:\r\n",
+    "                    hq.heappush(wq,(c+1,e))\r\n",
+    "    while lq:\r\n",
+    "        c,s = hq.heappop(lq)\r\n",
+    "        if lcost[s] > c:\r\n",
+    "            lcost[s] = c\r\n",
+    "            for e in lose[s]:\r\n",
+    "                if lcost[e] > c+1:\r\n",
+    "                    hq.heappush(lq,(c+1,e))\r\n",
+    "    return 1 if sum(True for l,w in zip(lcost,wcost) if l != float(\"INF\") or w != float(\"INF\")) == n else 0\r\n",
+    "\r\n",
+    "def solution(n, results):\r\n",
+    "    win,lose = [[] for _ in range(n)],[[] for _ in range(n)]\r\n",
+    "    for (w,l) in results:\r\n",
+    "        win[w-1].append(l-1)\r\n",
+    "        lose[l-1].append(w-1)\r\n",
     "    return sum(ftn(num,n,win,lose) for num in range(n))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "단어 변환"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "'''\n",
-    "ans = float(\"INF\")\n",
-    "def dfs(now,word,visited,target):\n",
-    "    global ans\n",
-    "    if now == target:\n",
-    "        if ans > sum(visited):\n",
-    "            ans = sum(visited)\n",
-    "    else:\n",
-    "        for idx,tmp in enumerate(word):\n",
-    "            if visited[idx] == False and sum(True for x,y in zip(tmp,now) if x!=y) == 1:\n",
-    "                visited[idx] = True\n",
-    "                dfs(tmp,word,visited,target)\n",
-    "                visited[idx] = False\n",
-    "                \n",
-    "def solution(begin, target, words):\n",
-    "    if target not in words:\n",
-    "        return 0\n",
-    "    dfs(begin,words,[False] * len(words),target)\n",
-    "    return ans\n",
-    "'''\n",
-    "import heapq as hq\n",
-    "def solution(begin, target, words):\n",
-    "    words.append(begin)\n",
-    "    v = [[] for _ in range(len(words))]\n",
-    "    Flag = True\n",
-    "    for s in range(len(words)):\n",
-    "        if words[s] == target:\n",
-    "            Flag = False\n",
-    "            t_idx = s\n",
-    "        for e in range(len(words)):\n",
-    "            if sum(True for x,y in zip(words[s],words[e]) if x!=y) == 1:\n",
-    "                v[s].append(e)\n",
-    "    if Flag:\n",
-    "        return 0\n",
-    "    cost = [float(\"INF\")] * len(words)\n",
-    "    que = [(0,len(words) - 1)]\n",
-    "    while que:\n",
-    "        cnt,s = hq.heappop(que)\n",
-    "        if cost[s] > cnt:\n",
-    "            cost[s] = cnt\n",
-    "            for e in v[s]:\n",
-    "                if cost[e] > cnt + 1:\n",
-    "                    hq.heappush(que,(cnt+1,e))\n",
+    "'''\r\n",
+    "ans = float(\"INF\")\r\n",
+    "def dfs(now,word,visited,target):\r\n",
+    "    global ans\r\n",
+    "    if now == target:\r\n",
+    "        if ans > sum(visited):\r\n",
+    "            ans = sum(visited)\r\n",
+    "    else:\r\n",
+    "        for idx,tmp in enumerate(word):\r\n",
+    "            if visited[idx] == False and sum(True for x,y in zip(tmp,now) if x!=y) == 1:\r\n",
+    "                visited[idx] = True\r\n",
+    "                dfs(tmp,word,visited,target)\r\n",
+    "                visited[idx] = False\r\n",
+    "                \r\n",
+    "def solution(begin, target, words):\r\n",
+    "    if target not in words:\r\n",
+    "        return 0\r\n",
+    "    dfs(begin,words,[False] * len(words),target)\r\n",
+    "    return ans\r\n",
+    "'''\r\n",
+    "import heapq as hq\r\n",
+    "def solution(begin, target, words):\r\n",
+    "    words.append(begin)\r\n",
+    "    v = [[] for _ in range(len(words))]\r\n",
+    "    Flag = True\r\n",
+    "    for s in range(len(words)):\r\n",
+    "        if words[s] == target:\r\n",
+    "            Flag = False\r\n",
+    "            t_idx = s\r\n",
+    "        for e in range(len(words)):\r\n",
+    "            if sum(True for x,y in zip(words[s],words[e]) if x!=y) == 1:\r\n",
+    "                v[s].append(e)\r\n",
+    "    if Flag:\r\n",
+    "        return 0\r\n",
+    "    cost = [float(\"INF\")] * len(words)\r\n",
+    "    que = [(0,len(words) - 1)]\r\n",
+    "    while que:\r\n",
+    "        cnt,s = hq.heappop(que)\r\n",
+    "        if cost[s] > cnt:\r\n",
+    "            cost[s] = cnt\r\n",
+    "            for e in v[s]:\r\n",
+    "                if cost[e] > cnt + 1:\r\n",
+    "                    hq.heappush(que,(cnt+1,e))\r\n",
     "    return cost[t_idx] if cost[t_idx] != float(\"INF\") else 0"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "보석 쇼핑"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "def solution(gems):\n",
-    "    dic = defaultdict(int)\n",
-    "    Len = len(set(gems))\n",
-    "    lt,rt,ans = 0,0,[1,len(gems)]\n",
-    "    while lt<=rt:\n",
-    "        if len(dic) == Len:\n",
-    "            if ans[1]-ans[0]+1 > rt-lt:\n",
-    "                ans = [lt+1,rt]\n",
-    "            if dic[gems[lt]] == 1:\n",
-    "                del dic[gems[lt]]\n",
-    "            else:\n",
-    "                dic[gems[lt]] -= 1\n",
-    "            lt += 1\n",
-    "        else:\n",
-    "            if rt < len(gems):\n",
-    "                dic[gems[rt]] += 1        \n",
-    "                rt += 1\n",
-    "            else:\n",
-    "                lt += 1\n",
+    "from collections import defaultdict\r\n",
+    "def solution(gems):\r\n",
+    "    dic = defaultdict(int)\r\n",
+    "    Len = len(set(gems))\r\n",
+    "    lt,rt,ans = 0,0,[1,len(gems)]\r\n",
+    "    while lt<=rt:\r\n",
+    "        if len(dic) == Len:\r\n",
+    "            if ans[1]-ans[0]+1 > rt-lt:\r\n",
+    "                ans = [lt+1,rt]\r\n",
+    "            if dic[gems[lt]] == 1:\r\n",
+    "                del dic[gems[lt]]\r\n",
+    "            else:\r\n",
+    "                dic[gems[lt]] -= 1\r\n",
+    "            lt += 1\r\n",
+    "        else:\r\n",
+    "            if rt < len(gems):\r\n",
+    "                dic[gems[rt]] += 1        \r\n",
+    "                rt += 1\r\n",
+    "            else:\r\n",
+    "                lt += 1\r\n",
     "    return ans"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "셔틀버스"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from collections import deque\n",
-    "def ftn(s):\n",
-    "    h,m = map(int,s.split(\":\"))\n",
-    "    return h*60+m\n",
-    "    \n",
-    "def solution(n, t, m, timetable):\n",
-    "    start = 9*60\n",
-    "    que = deque(sorted([ftn(x) for x in timetable if ftn(x) <= start + n*t]))\n",
-    "    \n",
-    "    while n > 1:\n",
-    "        cnt = 0\n",
-    "        while que and cnt < m and que[0] <= start:\n",
-    "            que.popleft()\n",
-    "            cnt += 1\n",
-    "        n -= 1\n",
-    "        start += t\n",
-    "    if len(que) == 0:\n",
-    "        return \":\".join([\"0\"+x if len(x) == 1 else x for x in map(str,divmod(start,60))])\n",
-    "    \n",
-    "    while 1:\n",
-    "        tmp = que.popleft()\n",
-    "        m -= 1\n",
-    "        if m == 0:\n",
-    "            return \":\".join([\"0\"+x if len(x) == 1 else x for x in map(str,divmod(tmp-1,60))])\n",
-    "\n",
-    "        if len(que) == 0:\n",
+    "from collections import deque\r\n",
+    "def ftn(s):\r\n",
+    "    h,m = map(int,s.split(\":\"))\r\n",
+    "    return h*60+m\r\n",
+    "    \r\n",
+    "def solution(n, t, m, timetable):\r\n",
+    "    start = 9*60\r\n",
+    "    que = deque(sorted([ftn(x) for x in timetable if ftn(x) <= start + n*t]))\r\n",
+    "    \r\n",
+    "    while n > 1:\r\n",
+    "        cnt = 0\r\n",
+    "        while que and cnt < m and que[0] <= start:\r\n",
+    "            que.popleft()\r\n",
+    "            cnt += 1\r\n",
+    "        n -= 1\r\n",
+    "        start += t\r\n",
+    "    if len(que) == 0:\r\n",
+    "        return \":\".join([\"0\"+x if len(x) == 1 else x for x in map(str,divmod(start,60))])\r\n",
+    "    \r\n",
+    "    while 1:\r\n",
+    "        tmp = que.popleft()\r\n",
+    "        m -= 1\r\n",
+    "        if m == 0:\r\n",
+    "            return \":\".join([\"0\"+x if len(x) == 1 else x for x in map(str,divmod(tmp-1,60))])\r\n",
+    "\r\n",
+    "        if len(que) == 0:\r\n",
     "            return \":\".join([\"0\"+x if len(x) == 1 else x for x in map(str,divmod(start,60))])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "2xn 타일링"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def solution(n):\n",
-    "    a,b = 1,2\n",
-    "    for _ in range(n-2):\n",
-    "        b,a = a+b,b\n",
+    "def solution(n):\r\n",
+    "    a,b = 1,2\r\n",
+    "    for _ in range(n-2):\r\n",
+    "        b,a = a+b,b\r\n",
     "    return b%1_000_000_007"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "불량사용자"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "from collections import deque\n",
-    "def ftn(st1,st2):\n",
-    "    return 1 if len(st1) == len(st2) == sum(True if x==y or y == \"*\" else False for x,y in zip(st1,st2)) else 0\n",
-    "\n",
-    "def solution(user_id, banned_id):\n",
-    "    ans = []\n",
-    "    for b in banned_id:\n",
-    "        if len(ans) == 0:\n",
-    "            ans = [[x] for x in user_id if ftn(x,b) == 1]\n",
-    "        else:\n",
-    "            tmp = [x for x in user_id if ftn(x,b) == 1]\n",
-    "            ans = [y + [x] for x in tmp for y in ans if x not in y]\n",
-    "    tmp = deque(sorted([sorted(x) for x in ans if len(x) == len(banned_id)]))\n",
-    "    ans = []\n",
-    "    while tmp:\n",
-    "        t = tmp.pop()\n",
-    "        if len(ans) == 0 or ans[-1] != t:\n",
-    "            ans.append(t)\n",
+    "from collections import deque\r\n",
+    "def ftn(st1,st2):\r\n",
+    "    return 1 if len(st1) == len(st2) == sum(True if x==y or y == \"*\" else False for x,y in zip(st1,st2)) else 0\r\n",
+    "\r\n",
+    "def solution(user_id, banned_id):\r\n",
+    "    ans = []\r\n",
+    "    for b in banned_id:\r\n",
+    "        if len(ans) == 0:\r\n",
+    "            ans = [[x] for x in user_id if ftn(x,b) == 1]\r\n",
+    "        else:\r\n",
+    "            tmp = [x for x in user_id if ftn(x,b) == 1]\r\n",
+    "            ans = [y + [x] for x in tmp for y in ans if x not in y]\r\n",
+    "    tmp = deque(sorted([sorted(x) for x in ans if len(x) == len(banned_id)]))\r\n",
+    "    ans = []\r\n",
+    "    while tmp:\r\n",
+    "        t = tmp.pop()\r\n",
+    "        if len(ans) == 0 or ans[-1] != t:\r\n",
+    "            ans.append(t)\r\n",
     "    return len(ans)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "표편집"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "class ftn:\r\n",
+    "    def __init__(self,n,k):\r\n",
+    "        self.start = 1\r\n",
+    "        self.end = n\r\n",
+    "        self.k = k\r\n",
+    "        self.sumV = k\r\n",
+    "        self.tree = [0] * (4*n)\r\n",
+    "\r\n",
+    "        self.ans = [\"O\"] * n\r\n",
+    "    def MK(self,strat,end,T_idx = 1):\r\n",
+    "        if strat == end:\r\n",
+    "            self.tree[T_idx] = 1\r\n",
+    "            return self.tree[T_idx]\r\n",
+    "        mid = (strat+end)//2\r\n",
+    "        self.tree[T_idx] = self.MK(strat,mid,T_idx*2) + self.MK(mid+1,end,T_idx*2+1)\r\n",
+    "        return self.tree[T_idx]\r\n",
+    "    \r\n",
+    "    def C(self,start,end,idx,T_idx=1):\r\n",
+    "        if start == end:\r\n",
+    "            self.tree[T_idx] = 0\r\n",
+    "        else:\r\n",
+    "            self.tree[T_idx] -= 1\r\n",
+    "            mid = (start+end)//2\r\n",
+    "            if start<=idx<=mid:\r\n",
+    "                self.C(start,mid,idx,T_idx*2)\r\n",
+    "            else:\r\n",
+    "                self.C(mid+1,end,idx,T_idx*2+1)\r\n",
+    "    \r\n",
+    "    def U(self,start,end,value,T_idx=1):\r\n",
+    "        if start == end:\r\n",
+    "            self.k = start\r\n",
+    "        else:\r\n",
+    "            mid = (start+end)//2\r\n",
+    "            if self.tree[2*T_idx] >= value:\r\n",
+    "                self.U(start,mid,value,2*T_idx)\r\n",
+    "            else:\r\n",
+    "                self.U(mid+1,end,value-self.tree[2*T_idx],2*T_idx+1)\r\n",
+    "\r\n",
+    "    def Z(self,start,end,idx,T_idx = 1):\r\n",
+    "        if start == end:\r\n",
+    "            self.tree[T_idx] = 1\r\n",
+    "        else:\r\n",
+    "            self.tree[T_idx] += 1\r\n",
+    "            mid = (start+end)//2\r\n",
+    "            if start <= idx <= mid:\r\n",
+    "                self.Z(start,mid,idx,2*T_idx)\r\n",
+    "            else:\r\n",
+    "                self.Z(mid+1,end,idx,2*T_idx+1)\r\n",
+    "    def decode(self,start,end,T_idx = 1):\r\n",
+    "        if start == end:\r\n",
+    "            if self.tree[T_idx] == 0:\r\n",
+    "                self.ans[start-1] = \"X\"\r\n",
+    "        else:\r\n",
+    "            mid = (start+end)//2\r\n",
+    "            self.decode(start,mid,2*T_idx)\r\n",
+    "            self.decode(mid+1,end,2*T_idx+1)\r\n",
+    "\r\n",
+    "def solution(n,k,cmd):\r\n",
+    "    sol = ftn(n,k+1)\r\n",
+    "    sol.MK(1,n)\r\n",
+    "    DL = []\r\n",
+    "\r\n",
+    "    for cd in cmd:\r\n",
+    "        if cd == \"C\":\r\n",
+    "            DL.append(sol.k)\r\n",
+    "            sol.C(1,n,sol.k)\r\n",
+    "            if sol.tree[1] == sol.sumV-1:\r\n",
+    "                sol.U(1,n,sol.sumV-1)\r\n",
+    "                sol.sumV -=1\r\n",
+    "            else:\r\n",
+    "                sol.U(1,n,sol.sumV)\r\n",
+    "\r\n",
+    "        elif cd == \"Z\":\r\n",
+    "            tmp = DL.pop()\r\n",
+    "            sol.Z(1,n,tmp)\r\n",
+    "            if tmp < sol.k:\r\n",
+    "                sol.sumV += 1\r\n",
+    "\r\n",
+    "        else:\r\n",
+    "            cm,v = cd.split(\" \")\r\n",
+    "            if cm == \"U\":\r\n",
+    "                sol.U(1,n,sol.sumV-int(v))\r\n",
+    "                sol.sumV -= int(v)\r\n",
+    "            else:\r\n",
+    "                sol.U(1,n,sol.sumV+int(v))\r\n",
+    "                sol.sumV += int(v)\r\n",
+    "    sol.decode(1,n)\r\n",
+    "    return ''.join(sol.ans)"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,7 +352,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
+  },
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
