--- a/0805/DH.ipynb
+++ b/0805/DH.ipynb
@@ -236,7 +236,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "표편집"
+    "표편집\r\n",
+    "\r\n",
+    "세그먼트 트리 : https://imksh.com/23"
    ],
    "metadata": {}
   },
