--- a/0708/0708_sj.ipynb
+++ b/0708/0708_sj.ipynb
@@ -288,7 +288,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import combinations\n",
+    "from collections import defaultdict\n",
+    "def all_cases(tmp):\n",
+    "    cases = []\n",
+    "    scores = []\n",
+    "    for i in range(5):\n",
+    "        for j in combinations([0,1,2,3], i):\n",
+    "            case = ''\n",
+    "            for idx in range(4):\n",
+    "                if idx not in j:\n",
+    "                    case += tmp[idx]\n",
+    "                else:\n",
+    "                    case += '-'\n",
+    "            cases.append(case)\n",
+    "            scores.append(int(tmp[4]))\n",
+    "    return cases, scores\n",
+    "\n",
+    "def binary_search(arr, score):\n",
+    "    lt, rt = 0, len(arr)\n",
+    "    while lt < rt:\n",
+    "        mid = (lt+rt)//2\n",
+    "        if arr[mid] < score:\n",
+    "            lt = mid + 1\n",
+    "        else:\n",
+    "            rt = mid\n",
+    "    return rt\n",
+    "\n",
+    "def solution(info, query):\n",
+    "    answer = []\n",
+    "    table = defaultdict(list)\n",
+    "    for x in info:\n",
+    "        infos, scores  = all_cases(x.split())\n",
+    "        for idx, i in enumerate(infos):\n",
+    "            table[i].append(scores[idx])\n",
+    "    for v in table.values():\n",
+    "        v.sort()\n",
+    "    for q in query:\n",
+    "        q = q.split(\" and \")\n",
+    "        q, score = ''.join(q[:-1]) + q[-1].split(\" \")[0], int(q[-1].split(\" \")[1])\n",
+    "        answer.append(len(table[q]) - binary_search(table[q], score))\n",
+    "    return answer\n",
+    "\n",
+    "# 조합 + 이분탐색\n",
+    "# 각 info별로 나올수 있는 모든 조합(16개*len(info))들을 만들고 각 query에 해당하는 조건만 이분탐색으로 추출\n",
+    "# 이게 2단계라고..?"
+   ]
   },
   {
    "cell_type": "markdown",
